--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html data-controller="theme-switcher">
   <head>
-    <title>FpDeck</title>
+    <title>Fp Deck</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= favicon_link_tag asset_path('logo.svg') %>
+
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.turbo.min.js"></script>
      
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <script>
+        if (
+          localStorage.getItem('color-theme') === 'dark' ||
+          (!('color-theme' in localStorage) &&
+            window.matchMedia('(prefers-color-scheme: dark)').matches)
+        ) {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+    </script>
   </head>
 
   <body class="relative">
-   <div class="flex absolute bg-gray-600 inset-0 bg-opacity-15 z-30" id="overly"></div>
+   <div class="hidden absolute bg-gray-600 inset-0 bg-opacity-15 z-30" id="overly"></div>
     <main class="">
+      <%=render(HeaderComponent.new)%>
       <%= yield %>
     </main>
   </body>
