Add header componet

--- a/app/components/header_component/header_component.html.erb
+++ b/app/components/header_component/header_component.html.erb
@@ -1,1 +1,67 @@
-<div>Add Header template here</div>
+<nav class="nav">
+  <div class="inner-nav-container">
+
+    <ul class="nav-item-container">
+        <li>
+         <%=link_to root_path, class: 'logo-link' do%>
+           <%=image_tag("logo.svg", class: 'logo')%>
+         <%end%>
+        </li>
+        <li> <%=link_to "Stats", root_path, class: 'nav-link'%> </li>
+        <li><%=link_to "Trading accounts", trading_accounts_path, class: 'nav-link'%></li>
+        <li><%=link_to "Payouts", root_path, class: 'nav-link'%></li>
+        <li><%=link_to "Payouts", root_path, class: 'nav-link'%></li>
+        <li><%=link_to "Referrals", root_path, class: 'nav-link'%></li>
+        <li><%=link_to "Flags", root_path, class: 'nav-link'%></li>
+        <li><%=link_to "Competitions", root_path, class: 'nav-link'%></li>
+        <li><%=link_to "Templates", root_path, class: 'nav-link'%></li>
+      </ul>
+
+
+  <div class="flex gap-1 md:order-2">
+    <button
+  id="theme-toggle"
+  type="button"
+  class="btn-theme-switch"
+>
+  <svg
+    id="theme-toggle-dark-icon"
+    class="w-5 h-5 hidden"
+    fill="currentColor"
+    viewBox="0 0 20 20"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
+    ></path>
+  </svg>
+  <svg
+    id="theme-toggle-light-icon"
+    class="w-5 h-5 hidden"
+    fill="currentColor"
+    viewBox="0 0 20 20"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+      fill-rule="evenodd"
+      clip-rule="evenodd"
+    ></path>
+  </svg>
+  </button>
+
+    <div class="relative hidden md:block">
+      <div class="global-search-container">
+        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+        </svg>
+        <span class="sr-only">Search icon</span>
+      </div>
+      <input type="text" id="search-navbar" class="block w-5 py-[10px] px-0 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
+    </div>
+  </div>
+  <select id="emails" class="filter-select-field w-10">
+    <option value="<%=@user.email%>"><%=@user.email%></option>
+  </select>
+  </div>
+</nav>
