--- a/app/components/search_filter_component/search_filter_component.html.erb
+++ b/app/components/search_filter_component/search_filter_component.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white py-8 px-6 text-gray-900 w-64 dark:bg-gray-900 dark:text-white border-r-2 border-gray-50">
+<div class="bg-white py-8 px-6 text-gray-900 w-full dark:bg-gray-900 dark:text-white border-r-2 border-gray-50">
 <%=form_with model: @search_filter, method: :get, class: 'filter-search-form', data: {controller:"search-filters"} do |f|%>
   <div>
   <label>Saved Filter</label>
