--- a/app/components/table_component/table_component.html.erb
+++ b/app/components/table_component/table_component.html.erb
@@ -1,153 +1,38 @@
 
-
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-                <th scope="col" class="px-6 py-3">
-                    ID
+            <tr class="table-row">
+                <th scope="row" class="px-1 py-4 font-normal text-[12px] text-gray-900 whitespace-nowrap dark:text-white">
+                    <%=@trading_account.id%>
                 </th>
-                <th scope="col" class="px-6 py-3">
-                    User Type
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Phase
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    User
-                </th>
-                <th scope="col" class="px-6 py-3">
-                   Size
-                </th>
-                  <th scope="col" class="px-6 py-3">
-                   Status
-                </th>  <th scope="col" class="px-6 py-3">
-                   Started
-                </th>  <th scope="col" class="px-6 py-3">
-                   Ended
-                </th>  <th scope="col" class="px-6 py-3">
-                   Balance
-                </th>
-                <th scope="col" class="px-6 py-3">
-                   Profit
-                </th>
-
-                <th scope="col" class="px-6 py-3">
-                   Equity
-                </th>
-
-                <th scope="col" class="px-6 py-3">
-                   O.p
-                </th>
-
-                <th scope="col" class="px-6 py-3">
-                   Payouts
-                </th>
+                <td class="px-1 py-4 font-normal text-[12px]">
+                   <span class="type_and_phase"> <%=@trading_account.user_type%></span>
+                </td>
+                <td class="px-1 py-4 font-normal text-[12px]">
+                 <span class="type_and_phase"><%=@trading_account.phase%></span>
+                </td>
+                <td class="px-1 py-4 font-normal text-[12px]">
+                 <%=@trading_account.user.full_name%>
+                </td>
+                <td class="px-1 py-4 font-normal text-[12px]">
+                   <%=number_to_currency(@trading_account.size)%>
+                </td><td class="px-1 py-4 font-normal text-[12px] ">
+                  <span class="status status-<%=@trading_account.status.name.downcase%>"><%=@trading_account.status.name.split("_").join(" ")%></span>
+                </td><td class="px-1 py-4 font-normal text-[12px]">
+                    <%=@trading_account.started.strftime("%b %d, %k:%M ")%>
+                </td><td class="px-1 py-4 font-normal text-[12px]">
+                <%=@trading_account.ended.strftime("%b %d, %k:%M ")%>
+                </td><td class="px-1 py-4 font-normal text-[12px]">
+                   <%=@trading_account.balance%>
+                </td><td class="px-1 py-4 font-normal text-[12px]">
+                   <%=@trading_account.profit%>
+                    
+                </td><td class="px-1 py-4 font-normal text-[12px]">
+                   <%=@trading_account.equity%>
+                   
+                </td><td class="px-1 py-4 font-normal text-[12px]">
+                     <%=@trading_account.op%>
+                </td>
+                <td class="px-1 py-4 font-normal text-[12px] text-right">
+                <%=@trading_account.payouts%>
+                                  </td>
             </tr>
-        </thead>
-        <tbody>
-            <tr class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Apple MacBook Pro 17"
-                </th>
-                <td class="px-6 py-4">
-                    Silver
-                </td>
-                <td class="px-6 py-4">
-                    Laptop
-                </td>
-                <td class="px-6 py-4">
-                    $2999
-                </td>
-                <td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                </td>
-            </tr>
-            <tr class="bg-white  dark:bg-gray-800  hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Microsoft Surface Pro
-                </th>
-                <td class="px-6 py-4">
-                    White
-                </td>
-                <td class="px-6 py-4">
-                    Laptop PC
-                </td>
-                <td class="px-6 py-4">
-                    $1999
-                </td>
-                <td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                </td>
-            </tr>
-            <tr class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Magic Mouse 2
-                </th>
-                <td class="px-6 py-4">
-                    Black
-                </td>
-                <td class="px-6 py-4">
-                    Accessories
-                </td>
-                <td class="px-6 py-4">
-                    $99
-                </td>
-                <td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td><td class="px-6 py-4">
-                    $2999
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+          
