--- a/app/components/paginate_component/paginate_component.html.erb
+++ b/app/components/paginate_component/paginate_component.html.erb
@@ -1,9 +1,7 @@
-<div>
   <p>Users</p>
-     <div>
-         <p>Pagination here</p>
-     <select id="emails" class="filter-select-field w-10">
+    <div class="pagination">
+    <p> 1 - 50 < ></p>
+     <select id="emails" class="filter-select-field w-32">
     <option value="value">Export</option>
   </select>
-     <div>
-</div>
+     </div>
