--- a/app/components/search_filter_component/search_filter_component.html.erb
+++ b/app/components/search_filter_component/search_filter_component.html.erb
@@ -1,12 +1,8 @@
-<div class="bg-white py-8 px-6 text-gray-900 w-full dark:bg-gray-900 dark:text-white border-r-2 border-gray-50">
-<%=form_with model: @search_filter, method: :get, class: 'filter-search-form', data: {controller:"search-filters"} do |f|%>
+<div id="filter-search-form" class="bg-white py-8 px-6 text-gray-900 w-full dark:bg-gray-900 dark:text-white border-r-2 border-gray-50">
+<%=form_with model: @search_filter, method: :get, class: 'filter-search-form', data: {controller:"search-filters"} do |f|%> 
   <div>
   <label>Saved Filter</label>
-  <%= select_tag(:saved_filter, options_for_select(@saved_filters, "Saved Filters"), class: 'filter-select-field') %>
-  </div>
-  <div>
-   <label>Status</label>
-    <%= f.select(:status_id, options_for_select(@statuses), {},{class: 'filter-select-field'}) %>
+  <%= select_tag(:saved_filter, options_for_select(@saved_filters, "Saved Filters"), class: 'filter-select-field', data:{action: 'search-filters#prePopulate'}) %>
   </div>
     
     <div>
@@ -20,35 +16,47 @@
           <%= f.search_field :user_name, class: 'filter-input-field', placeholder: "Search for user name" %>
       </div>
     </div>
+
     <div>
      <label> User Types </label>
     <%= f.select(:user_type, options_for_select(@types), {},{class: 'filter-select-field'}) %>
    </div>
-
+   
    <div>
     <label> User Phase </label>
     <%= f.select(:phase, options_for_select(@pases), {},{class: 'filter-select-field'}) %>
   </div>
-
- <div>
+   <div>
     <label>Account Size </label>
-      <div class="flex w-1/2">
-    <%# <%=f.select(:account_size_from, {}, {class: 'filter-date-field'}) %> 
-    <%=f.date_field :ended, class: 'filter-date-field'%>
-  </div>
+      <div class="flex w-full">
+    <%= f.select(:account_size_from, options_for_select([["From", "from"], ["10000", "10000"]]), {},{class: 'filter-date-field'}) %>
+    <%= f.select(:account_size_to, options_for_select([["To", "to"], ["20000", "20000"]]), {},{class: 'filter-date-field'}) %>
+     </div>
   </div>
 
+  <div>
+   <label>Status</label>
+    <%= f.select(:status_id, options_for_select(@statuses), {},{class: 'filter-select-field'}) %>
+  </div>
 
    <div>
     <label> Started - Ended </label>
-   <div class="flex w-1/2">
-    <%=f.date_field :started, class: 'filter-date-field' %>
-    <%=f.date_field :ended, class: 'filter-date-field'%>
+    <div class="flex w-full">
+      <%=f.date_field :started, class: 'filter-date-field' %>
+      <%=f.date_field :ended, class: 'filter-date-field'%>
+    </div>
   </div>
+  <div>
+    <label>Balance </label>
+      <div class="flex w-full">
+    <%= f.select(:balance_size_from, options_for_select([["From", "from"], ["10000", "10000"]]), {},{class: 'filter-date-field'}) %>
+    <%= f.select(:balance_size_to, options_for_select([["To", "to"], ["20000", "20000"]]), {},{class: 'filter-date-field'}) %>
+     </div>
   </div>
   <div class="flex flex-col gap-2">
+  <input type="hidden" id="user_id" value="<%=@user.id%>">
    <%=f.submit "#{2.even? ? "Filter results": "Filter results (0)"}", class: 'btn-filter btn-search-filter'%>
-   <%=link_to "Save Filters", "#", class: 'btn-filter btn-save-filter', data:{action: 'search-filters#save_filters'}%>
+   <%=link_to "Save Filters", "#", class: 'btn-filter btn-save-filter', data:{action: 'search-filters#show'}%>
   </div>
 <%end%>
 </div>
