--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -14,8 +14,8 @@
   }
 
   .inner-nav-container {
-    @apply max-w-screen-xl flex flex-wrap items-center justify-between p-4
-  }
+    @apply max-w-screen-xl flex flex-wrap items-center justify-between py-4 px-3
+   }
 
   .nav-item-container {
     @apply flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white md:items-center dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700
@@ -30,7 +30,7 @@
   }
 
   .nav-link {
-    @apply block py-2 px-2 text-white bg-blue-700 text-sm rounded md:bg-transparent md:text-[#3C4149] md:p-0 hover:bg-[#F1F3F9] hover:py-1 hover:px-1 md:dark:text-white
+    @apply block py-2 px-2 text-white bg-blue-700 text-sm rounded md:bg-transparent md:text-[#3C4149] md:p-0 hover:bg-[#F1F3F9] hover:py-[1px] hover:px-[1px] md:dark:text-white
   }
 
   .btn-theme-switch {
@@ -46,16 +46,17 @@
   }
 
   /* main container */
+  
   .main-container {
     @apply flex bg-[#f8f9fc]
   }
 
   .left {
-    @apply w-1/5 border border-[#f8f9fd] h-screen
+    @apply w-1/5 border-r border-[#ededee] h-screen bg-[#f8f9fc]
   }
 
   .right {
-    @apply w-3/4 flex-auto p-4  dark:bg-gray-800 dark:text-gray-400
+    @apply w-3/4 flex-auto p-4  dark:bg-gray-800 dark:text-gray-400 bg-[#f8f9fc]
   }
 
   .right-inner {
@@ -71,11 +72,15 @@
   }
 
   .widgets {
-    @apply flex gap-[12px] overflow-x-hidden
+    @apply flex gap-[12px] overflow-x-hidden justify-around
   }
 
   .widget {
-    @apply bg-[#FFFFFFCC] border border-[#00000005] rounded-lg p-3 cursor-pointer
+    @apply bg-[#FFFFFFCC] border border-[#00000005] rounded-lg p-2 cursor-pointer
+  }
+
+  .save-widget{
+    @apply text-[#1A56DB] text-sm font-semibold
   }
 
    .current_month_stats{
@@ -141,7 +146,7 @@
 
 /* table */
 .table-container{
-  @apply relative overflow-x-auto shadow-md sm:rounded-lg
+  @apply relative overflow-x-auto  sm:rounded-lg
 }
 
 .table{
@@ -149,7 +154,7 @@
 }
 
 .table-row{
-  @apply bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-200
+  @apply bg-[#f8f9fc] dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-200
 }
 
 .table-head{
