--- a/app/components/paginate_component/paginate_component.html.erb
+++ b/app/components/paginate_component/paginate_component.html.erb
@@ -1,7 +1,8 @@
   <p>Users</p>
     <div class="pagination">
-    <p> 1 - 50 < ></p>
+     <%== helpers.pagy_nav(@pagy) %>
+     
      <select id="emails" class="filter-select-field w-32">
     <option value="value">Export</option>
-  </select>
+     </select>
      </div>
