--- a/app/components/search_filter_component/search_filter_component.html.erb
+++ b/app/components/search_filter_component/search_filter_component.html.erb
@@ -1,62 +1,74 @@
-<div id="filter-search-form" class="bg-white py-8 px-6 text-gray-900 w-full dark:bg-gray-900 dark:text-white border-r-2 border-gray-50">
-<%=form_with model: @search_filter, method: :get, class: 'filter-search-form', data: {controller:"search-filters"} do |f|%> 
-  <div>
+<div data-controller="search-filters" class=" py-8 px-6 text-gray-900 w-full dark:bg-gray-900 dark:text-white border-r-2 border-gray-50">
+ <div>
   <label>Saved Filter</label>
   <%= select_tag(:saved_filter, options_for_select(@saved_filters, "Saved Filters"), class: 'filter-select-field', data:{action: 'search-filters#prePopulate'}) %>
   </div>
+<%=form_with model: @search_filter, url:trading_accounts_path,  method: :get, class: 'filter-search-form' do |f|%> 
+ 
     
     <div>
-      <label>User Name</label>
+      <label>User Name </label>
       <div class="relative">
           <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
               <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
               </svg>
           </div>
-          <%= f.search_field :user_name, class: 'filter-input-field', placeholder: "Search for user name" %>
+          <%= f.search_field :user_name, class: 'filter-input-field', data:{action: 'change->search-filters#filter'}, placeholder: "Search for user name" %>
       </div>
     </div>
 
     <div>
      <label> User Types </label>
-    <%= f.select(:user_type, options_for_select(@types), {},{class: 'filter-select-field'}) %>
+    <%= f.select(:user_type, options_for_select(@types,  selected: f.object.user_type), {},{class: 'filter-select-field', data:{action: 'change->search-filters#filter'}}) %>
    </div>
    
    <div>
     <label> User Phase </label>
-    <%= f.select(:phase, options_for_select(@pases), {},{class: 'filter-select-field'}) %>
+    <%= f.select(:phase, options_for_select(@pases,selected: f.object.phase), {},{class: 'filter-select-field', data:{action: 'change->search-filters#filter'}}) %>
   </div>
    <div>
     <label>Account Size </label>
       <div class="flex w-full">
-    <%= f.select(:account_size_from, options_for_select([["From", "from"], ["10000", "10000"]]), {},{class: 'filter-date-field'}) %>
-    <%= f.select(:account_size_to, options_for_select([["To", "to"], ["20000", "20000"]]), {},{class: 'filter-date-field'}) %>
+    <%= f.select(:account_size_from, options_for_select([["From", ""], ["10000", "10000"]],selected: f.object.account_size_from), {},{class: 'filter-date-field', data:{action: 'change->search-filters#filter'}}) %>
+    <%= f.select(:account_size_to, options_for_select([["To", ""], ["20000", "20000"]],selected: f.object.account_size_to), {},{class: 'filter-date-field', data:{action: 'change->search-filters#filter'}}) %>
      </div>
   </div>
 
   <div>
    <label>Status</label>
-    <%= f.select(:status_id, options_for_select(@statuses), {},{class: 'filter-select-field'}) %>
+    <%= f.select(:status_id, options_for_select(@statuses, selected: f.object.status_id), {},{class: 'filter-select-field',data:{action: 'change->search-filters#filter'}}) %>
   </div>
 
    <div>
     <label> Started - Ended </label>
     <div class="flex w-full">
-      <%=f.date_field :started, class: 'filter-date-field' %>
-      <%=f.date_field :ended, class: 'filter-date-field'%>
+      <%=f.date_field :started, class: 'filter-date-field', data:{action: 'change->search-filters#filter'}%>
+      <%=f.date_field :ended, class: 'filter-date-field', data:{action: 'change->search-filters#filter'}%>
     </div>
   </div>
   <div>
     <label>Balance </label>
       <div class="flex w-full">
-    <%= f.select(:balance_size_from, options_for_select([["From", "from"], ["10000", "10000"]]), {},{class: 'filter-date-field'}) %>
-    <%= f.select(:balance_size_to, options_for_select([["To", "to"], ["20000", "20000"]]), {},{class: 'filter-date-field'}) %>
-     </div>
+        <%= f.select(:balance_from, options_for_select([["From", ""], ["10000", "10000"]],selected: f.object.balance_from), {},{class: 'filter-date-field'}) %>
+        <%= f.select(:balance_to, options_for_select([["To", ""], ["20000", "20000"]],selected: f.object.balance_to), {},{class: 'filter-date-field'}) %>
+      </div>
   </div>
   <div class="flex flex-col gap-2">
   <input type="hidden" id="user_id" value="<%=@user.id%>">
-   <%=f.submit "#{2.even? ? "Filter results": "Filter results (0)"}", class: 'btn-filter btn-search-filter'%>
+   <turbo-frame id="btn-filter" class="btn-filter btn-search-filter flex justify-center text-center">
+   <%=f.submit "Filter results", class: '', id: "btn-filter1"%>
+   </turbo-frame>
+ 
    <%=link_to "Save Filters", "#", class: 'btn-filter btn-save-filter', data:{action: 'search-filters#show'}%>
   </div>
+<%end%>
+
+</div>
+
+<div class="mt-10 w-11/12 mx-auto">
+<%=link_to root_path, class: 'flex' do%>
+ <%=image_tag("sidebar.svg")%>
+ Hide filters sidebar
 <%end%>
 </div>
