--- a/app/views/search_filters/create.turbo_stream.erb
+++ b/app/views/search_filters/create.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%=turbo_stream.update "notification" do%>
- <%=render(SuccessMessageComponent.new(message: "Video succssfuly archived"))%>
+ <%=render(SuccessMessageComponent.new(message: "Search filter succssfuly saved"))%>
 <%end%>
