--- a/app/components/success_message_component/success_message_component.html.erb
+++ b/app/components/success_message_component/success_message_component.html.erb
@@ -4,7 +4,7 @@
   data-transition-enter-from="opacity-0 translate-x-6"
   data-transition-enter-to="opacity-100 translate-x-0"
   data-transition-leave-from="opacity-100 translate-x-0"
-  data-transition-leave-to="opacity-0 translate-x-6"  class="hidden items-center absolute top-1/4 left-[50%] z-20 p-4 mb-4 transition transform duration-1000 w-max text-blue-800 rounded-lg bg-green-100 border border-[green-400]" role="alert">
+  data-transition-leave-to="opacity-0 translate-x-6"  class="hidden items-center absolute top-1/5 left-1/2 z-20 p-4 mb-4 transition transform duration-1000 w-max text-blue-800 rounded-lg bg-green-100 border border-[green-400]" role="alert">
     <div class="ms-3 text-sm font-medium flex gap-1" id="success-message">
    <%=image_tag("logo.svg", class: 'w-4 h-4')%> 
 
