change email position

--- a/app/components/header_component/header_component.html.erb
+++ b/app/components/header_component/header_component.html.erb
@@ -57,11 +57,12 @@
         </svg>
         <span class="sr-only">Search icon</span>
       </div>
-      <input type="text" id="search-navbar" class="block w-5 py-[10px] px-0 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
+      <input type="text" id="search-navbar" class="block active:absolute active:top-1/2 w-5 py-[10px] px-0 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
     </div>
+    <select id="emails" class="filter-select-field w-64">
+      <option value="<%=@user.email%>"><%=@user.email%></option>
+    </select>
+    <%=image_tag("more.svg", class: 'dark:bg-white')%>
   </div>
-  <select id="emails" class="filter-select-field w-10">
-    <option value="<%=@user.email%>"><%=@user.email%></option>
-  </select>
   </div>
 </nav>
