--- a/app/views/search_filters/pre_populate.turbo_stream.erb
+++ b/app/views/search_filters/pre_populate.turbo_stream.erb
@@ -1,3 +1,8 @@
 <%=turbo_stream.update "filter-search-form" do%>
  <%=render(SearchFilterComponent.new(search_filter: @search_filter, user: current_user))%>
 <%end%>
+
+<%=turbo_stream.update "btn-filter" do%>
+  <button type="submit" class =''> Filter results (<%=@number_of_record%>)</button>
+<%end%>
+
