--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   </head>
 
   <body class="relative">
-   <div class="hidden absolute bg-gray-600 inset-0 bg-opacity-15 z-30" id="overly"></div>
+   <div class="hidden absolute bg-[#34405433] inset-0 z-30" id="overly"></div>
     <main class="">
        <% if user_signed_in?%>
       <%=render(HeaderComponent.new(user: current_user))%>
