Add style for edit and save buttton

--- a/app/views/trading_accounts/index.html.erb
+++ b/app/views/trading_accounts/index.html.erb
@@ -1,8 +1,8 @@
  <%=render(SavemodalComponent.new)%>
-<div class="main-container bg-[#FBFBFDCC]">
+<div class="main-container bg-[#FBFBFDCC]" >
 
 <div id="notification" class="relative top-[500px] left-1/2"></div>
- <div class="left" id="filter-search-form">
+ <div class="left" id="filter-search-form" data-controller="search-filters">
    <%=render(SearchFilterComponent.new(search_filter: SearchFilter.new, user: current_user))%>
  </div>
 
@@ -10,8 +10,8 @@
    <div class="right-inner" data-controller="widgets">
       <div class="right-inner-quick-stats">
        <p>Quick Stats</p>
-       <button class=" hidden save-widget" id="save-widget" data-action="widgets#save">Save</button>
-       <button class="flex items-center gap-2" id="edit-widget" data-action="widgets#edit"><%=image_tag("edit.svg")%>Edit</button>
+       <button class=" hidden save-widget dark:text-white" id="save-widget" data-action="widgets#save">Save</button>
+       <button class="flex items-center gap-2 dark:text-white" id="edit-widget" data-action="widgets#edit"><%=image_tag("edit.svg", class: 'dark:bg-white')%>Edit</button>
       </div>
       <div class="right-inner-widget-container">
         <%=render(WidgetsComponent.new)%>
@@ -68,8 +68,7 @@
         </thead>
         <tbody>
        <%=render(TableComponent.with_collection(@trading_accounts))%>
-
-        </tbody>
+      </tbody>
         </table>
       </div>
    </div>
