Add link to icon

--- a/app/components/search_filter_component/search_filter_component.html.erb
+++ b/app/components/search_filter_component/search_filter_component.html.erb
@@ -73,7 +73,7 @@
 <%end%>
 </div>
 <div class="mt-max-h-full relative">
-<%=link_to class: 'w-9/12 mx-auto gap-4 text-right', data:{action: 'search-filters#expand'} do%>
+<%=link_to root_path, class: 'w-9/12 mx-auto gap-4 text-right', data:{action: 'search-filters#expand'} do%>
  <%=image_tag("collapsible.svg", class: 'h-10 w-10 hidden', id: 'btn-show')%>
 <%end%>
 </div>
